base/alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  labels:
    app: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
      - name: alertmanager
        image: alertmanager:v0.23.0
        args:
        - --data.retention=120h
        - --web.external-url=http://alertmanager
        - --web.listen-address=0.0.0.0:9093
        - --config.file=/etc/alertmanager/alert-config.yaml
        - --storage.path=/alertmanager
        ports:
        - name: http
          containerPort: 9093
        volumeMounts:
        - mountPath: /etc/alertmanager
          name: alert-config
      volumes:
        - configMap:
            defaultMode: 420
            name: alert-config
          name: alert-config  
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alertmanager
  name: alertmanager
spec:
  ports:
  - port: 9093
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: alertmanager
  type: ClusterIP
