base/store-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-store-gateway
  labels:
    app: thanos-store-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-store-gateway
  template:
    metadata:
      labels:
        app: thanos-store-gateway
        thanos-store-api: "true"
    spec:
      containers:
      - name: store-gateway
        image: thanos:v0.24.0
        args:
        - store
        - --data-dir=/data
        - --index-cache-size=500MB
        - --chunk-pool-size=500MB
        - --objstore.config-file=/etc/prometheus/obs-config/bucket.yaml
        - --grpc-address=0.0.0.0:10901
        - --http-address=0.0.0.0:10902
        ports:
        - name: grpc
          containerPort: 10901
        - name: http
          containerPort: 10902
        volumeMounts:
        - name: s3-store-credentials
          mountPath: /etc/prometheus/obs-config
          readOnly: true
      volumes:
      - name: s3-store-credentials
        secret:
          secretName: store-s3-credentials
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-store-gateway
  name: thanos-store-gateway
spec:
  ports:
  - port: 10901
    protocol: TCP
    targetPort: grpc
    name: grpc
  selector:
    app: thanos-store-gateway
  type: ClusterIP
